{
  "version": 4,
  "terraform_version": "1.9.8",
  "serial": 363,
  "lineage": "02e0a743-ffa9-ae42-02bf-ac84cc26cd8e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-rad-ngw-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005a429967e85f053",
            "arn": "arn:aws:ec2:us-east-1:872515288273:elastic-ip/eipalloc-005a429967e85f053",
            "association_id": "eipassoc-0d21db9c84b3c120a",
            "domain": "vpc",
            "id": "eipalloc-005a429967e85f053",
            "network_border_group": "us-east-1",
            "network_interface": "eni-05fdd6ee8885cb69e",
            "private_dns": "ip-10-25-7-105.ec2.internal",
            "private_ip": "10.25.7.105",
            "public_dns": "ec2-52-3-212-157.compute-1.amazonaws.com",
            "public_ip": "52.3.212.157",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-rad-ngw-A"
            },
            "tags_all": {
              "Name": "eip-rad-ngw-A"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-rad-ngw-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1113e1524bb99f5",
            "arn": "arn:aws:ec2:us-east-1:872515288273:elastic-ip/eipalloc-0a1113e1524bb99f5",
            "association_id": "eipassoc-0bf75fe076b8f2862",
            "domain": "vpc",
            "id": "eipalloc-0a1113e1524bb99f5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b1493150b44d5992",
            "private_dns": "ip-10-25-62-22.ec2.internal",
            "private_ip": "10.25.62.22",
            "public_dns": "ec2-34-196-141-130.compute-1.amazonaws.com",
            "public_ip": "34.196.141.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "eip-rad-ngw-B"
            },
            "tags_all": {
              "Name": "eip-rad-ngw-B"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw-rad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:internet-gateway/igw-0b2a0cf93598a2b35",
            "id": "igw-0b2a0cf93598a2b35",
            "owner_id": "872515288273",
            "tags": {
              "Name": "igw-rad"
            },
            "tags_all": {
              "Name": "igw-rad"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-rad-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-005a429967e85f053",
            "association_id": "eipassoc-0d21db9c84b3c120a",
            "connectivity_type": "public",
            "id": "nat-002fbb1d802f2a93e",
            "network_interface_id": "eni-05fdd6ee8885cb69e",
            "private_ip": "10.25.7.105",
            "public_ip": "52.3.212.157",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03ddacc32d76fe93c",
            "tags": {
              "Name": "ngw-rad-A"
            },
            "tags_all": {
              "Name": "ngw-rad-A"
            }
          },
          "dependencies": [
            "aws_eip.eip-rad-ngw-A",
            "aws_subnet.sn-rad-web-A",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw-rad-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a1113e1524bb99f5",
            "association_id": "eipassoc-0bf75fe076b8f2862",
            "connectivity_type": "public",
            "id": "nat-0c21fe8ca03d74682",
            "network_interface_id": "eni-0b1493150b44d5992",
            "private_ip": "10.25.62.22",
            "public_ip": "34.196.141.130",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e2089144af209cb9",
            "tags": {
              "Name": "ngw-rad-B"
            },
            "tags_all": {
              "Name": "ngw-rad-B"
            }
          },
          "dependencies": [
            "aws_eip.eip-rad-ngw-B",
            "aws_subnet.sn-rad-web-B",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r-rad-ngw-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2a0cf93598a2b35",
            "id": "r-rtb-09c345d8cc282ffe11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09c345d8cc282ffe1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-rad",
            "aws_route_table.rt-rad-ngw-A",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r-rad-ngw-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b2a0cf93598a2b35",
            "id": "r-rtb-034f30ba74ba4f4f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-034f30ba74ba4f4f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw-rad",
            "aws_route_table.rt-rad-ngw-B",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r-rad-privet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f3b662128b19c5be1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-002fbb1d802f2a93e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3b662128b19c5be",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-rad-ngw-A",
            "aws_nat_gateway.ngw-rad-A",
            "aws_route_table.rt-rad-privet-A",
            "aws_subnet.sn-rad-web-A",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "r-rad-privet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0315fe6912fa0dcc81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0c21fe8ca03d74682",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0315fe6912fa0dcc8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-rad-ngw-B",
            "aws_nat_gateway.ngw-rad-B",
            "aws_route_table.rt-rad-privet-B",
            "aws_subnet.sn-rad-web-B",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rad-ngw-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:route-table/rtb-09c345d8cc282ffe1",
            "id": "rtb-09c345d8cc282ffe1",
            "owner_id": "872515288273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2a0cf93598a2b35",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-rad-ngw-A"
            },
            "tags_all": {
              "Name": "rt-rad-ngw-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rad-ngw-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:route-table/rtb-034f30ba74ba4f4f1",
            "id": "rtb-034f30ba74ba4f4f1",
            "owner_id": "872515288273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b2a0cf93598a2b35",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-rad-ngw-B"
            },
            "tags_all": {
              "Name": "rt-rad-ngw-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rad-privet-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:route-table/rtb-0f3b662128b19c5be",
            "id": "rtb-0f3b662128b19c5be",
            "owner_id": "872515288273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-002fbb1d802f2a93e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-rad-privet-A"
            },
            "tags_all": {
              "Name": "rt-rad-privet-A"
            },
            "timeouts": null,
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-rad-privet-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:route-table/rtb-0315fe6912fa0dcc8",
            "id": "rtb-0315fe6912fa0dcc8",
            "owner_id": "872515288273",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0c21fe8ca03d74682",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-rad-privet-B"
            },
            "tags_all": {
              "Name": "rt-rad-privet-B"
            },
            "timeouts": null,
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rad-app-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04468def803fc5ff4",
            "route_table_id": "rtb-0f3b662128b19c5be",
            "subnet_id": "subnet-099b39b136b42bce7"
          },
          "dependencies": [
            "aws_route_table.rt-rad-privet-A",
            "aws_subnet.sn-rad-app-A",
            "aws_subnet.sn-rad-db-A",
            "aws_vpc.vpc-rad"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b71def83fdeb4448",
            "route_table_id": "rtb-0f3b662128b19c5be",
            "subnet_id": "subnet-0203767d0cfa840c4"
          },
          "dependencies": [
            "aws_route_table.rt-rad-privet-A",
            "aws_subnet.sn-rad-app-A",
            "aws_subnet.sn-rad-db-A",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rad-app-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0996219ae8ace0e4e",
            "route_table_id": "rtb-0315fe6912fa0dcc8",
            "subnet_id": "subnet-0753d99d4a2c0fe18"
          },
          "dependencies": [
            "aws_route_table.rt-rad-privet-B",
            "aws_subnet.sn-rad-app-B",
            "aws_subnet.sn-rad-db-B",
            "aws_vpc.vpc-rad"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a3d78776b9b522c5",
            "route_table_id": "rtb-0315fe6912fa0dcc8",
            "subnet_id": "subnet-0c86e08ef22ee4399"
          },
          "dependencies": [
            "aws_route_table.rt-rad-privet-B",
            "aws_subnet.sn-rad-app-B",
            "aws_subnet.sn-rad-db-B",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rad-web-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e0829af4fc83283",
            "route_table_id": "rtb-09c345d8cc282ffe1",
            "subnet_id": "subnet-03ddacc32d76fe93c"
          },
          "dependencies": [
            "aws_route_table.rt-rad-ngw-A",
            "aws_subnet.sn-rad-web-A",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-rad-web-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0000a0988cfb55169",
            "route_table_id": "rtb-034f30ba74ba4f4f1",
            "subnet_id": "subnet-0e2089144af209cb9"
          },
          "dependencies": [
            "aws_route_table.rt-rad-ngw-B",
            "aws_subnet.sn-rad-web-B",
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-app-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-099b39b136b42bce7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.25.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b39b136b42bce7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-app-A"
            },
            "tags_all": {
              "Name": "sn-rad-app-A"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-app-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-0753d99d4a2c0fe18",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.25.64.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0753d99d4a2c0fe18",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-app-B"
            },
            "tags_all": {
              "Name": "sn-rad-app-B"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-db-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-0203767d0cfa840c4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.25.32.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0203767d0cfa840c4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-db-A"
            },
            "tags_all": {
              "Name": "sn-rad-db-A"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-db-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-0c86e08ef22ee4399",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.25.80.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c86e08ef22ee4399",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-db-B"
            },
            "tags_all": {
              "Name": "sn-rad-db-B"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-web-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-03ddacc32d76fe93c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.25.0.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ddacc32d76fe93c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-web-A"
            },
            "tags_all": {
              "Name": "sn-rad-web-A"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "sn-rad-web-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:subnet/subnet-0e2089144af209cb9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.25.48.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": true,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e2089144af209cb9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "872515288273",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sn-rad-web-B"
            },
            "tags_all": {
              "Name": "sn-rad-web-B"
            },
            "vpc_id": "vpc-02146807daa60ebe6"
          },
          "dependencies": [
            "aws_vpc.vpc-rad"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc-rad",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:872515288273:vpc/vpc-02146807daa60ebe6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.25.0.0/16",
            "default_network_acl_id": "acl-0132a22caa44d1104",
            "default_route_table_id": "rtb-0ea304f461cfde8db",
            "default_security_group_id": "sg-02676fd9cd4100404",
            "dhcp_options_id": "dopt-0667cbcfaa433f45a",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-02146807daa60ebe6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ea304f461cfde8db",
            "owner_id": "872515288273",
            "tags": {
              "Name": "vpc-rad"
            },
            "tags_all": {
              "Name": "vpc-rad"
            }
          }
        }
      ]
    }
  ]
}